WDC/antlr_gen/mylParser.cs
// Generated from myl.g4 by ANTLR 4.0.1-SNAPSHOT
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

public partial class mylParser : Parser {
	public const int
		T__19=1, T__18=2, T__17=3, T__16=4, T__15=5, T__14=6, T__13=7, T__12=8, 
		T__11=9, T__10=10, T__9=11, T__8=12, T__7=13, T__6=14, T__5=15, T__4=16, 
		T__3=17, T__2=18, T__1=19, T__0=20, TYPE=21, ID=22, INT=23, COMM_BLOCK=24, 
		LINE_COMM=25, NEWLINE=26, CHAR=27, STRING=28, CONST=29, TRUE=30, FALSE=31, 
		LET=32, EQU=33, GT=34, SHR=35, GTE=36, LT=37, SHL=38, LTE=39, MOD=40, 
		ADD=41, SUB=42, MUL=43, DIV=44, AND=45, OR=46, NOT=47, NEQU=48, XOR=49, 
		SEM=50, WS=51;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'on_interrupt'", "']'", "'&'", "')'", "','", "'while'", 
		"'['", "'for'", "'('", "'uses'", "'if'", "'--'", "'continue'", "'return'", 
		"'asm'", "'{'", "'break'", "'else'", "'}'", "'++'", "TYPE", "ID", "INT", 
		"COMM_BLOCK", "LINE_COMM", "NEWLINE", "CHAR", "STRING", "CONST", "'true'", 
		"'false'", "'='", "'=='", "'>'", "'>>'", "GTE", "'<'", "'<<'", "LTE", 
		"'%'", "'+'", "'-'", "'*'", "'/'", "AND", "OR", "NOT", "NEQU", "XOR", 
		"';'", "WS"
	};
	public const int
		RULE_prog = 0, RULE_stat = 1, RULE_break_stat = 2, RULE_continue_stat = 3, 
		RULE_on_interrupt_stat = 4, RULE_let_stat = 5, RULE_while_stat = 6, RULE_for_stat = 7, 
		RULE_for_step = 8, RULE_if_stat = 9, RULE_func_dec = 10, RULE_func_def = 11, 
		RULE_ids_def = 12, RULE_func_ret = 13, RULE_asm = 14, RULE_number_expr = 15, 
		RULE_self_addsub_stat = 16, RULE_self_addsub = 17, RULE_var_ref = 18, 
		RULE_func_call = 19, RULE_params_use = 20;
	public static readonly string[] ruleNames = {
		"prog", "stat", "break_stat", "continue_stat", "on_interrupt_stat", "let_stat", 
		"while_stat", "for_stat", "for_step", "if_stat", "func_dec", "func_def", 
		"ids_def", "func_ret", "asm", "number_expr", "self_addsub_stat", "self_addsub", 
		"var_ref", "func_call", "params_use"
	};

	public override string GrammarFileName { get { return "myl.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public mylParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgContext : ParserRuleContext {
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_prog; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 11) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 16) | (1L << 17) | (1L << 20) | (1L << TYPE) | (1L << ID) | (1L << MUL) | (1L << SEM))) != 0)) {
				{
				{
				State = 42; stat();
				}
				}
				State = 47;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public On_interrupt_statContext on_interrupt_stat() {
			return GetRuleContext<On_interrupt_statContext>(0);
		}
		public For_statContext for_stat() {
			return GetRuleContext<For_statContext>(0);
		}
		public Func_decContext func_dec() {
			return GetRuleContext<Func_decContext>(0);
		}
		public ITerminalNode SEM() { return GetToken(mylParser.SEM, 0); }
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public Func_defContext func_def() {
			return GetRuleContext<Func_defContext>(0);
		}
		public Func_retContext func_ret() {
			return GetRuleContext<Func_retContext>(0);
		}
		public Let_statContext let_stat() {
			return GetRuleContext<Let_statContext>(0);
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public Self_addsub_statContext self_addsub_stat() {
			return GetRuleContext<Self_addsub_statContext>(0);
		}
		public Continue_statContext continue_stat() {
			return GetRuleContext<Continue_statContext>(0);
		}
		public Func_callContext func_call() {
			return GetRuleContext<Func_callContext>(0);
		}
		public Break_statContext break_stat() {
			return GetRuleContext<Break_statContext>(0);
		}
		public While_statContext while_stat() {
			return GetRuleContext<While_statContext>(0);
		}
		public AsmContext asm() {
			return GetRuleContext<AsmContext>(0);
		}
		public If_statContext if_stat() {
			return GetRuleContext<If_statContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			State = 90;
			switch (_input.La(1)) {
			case 1:
			case 6:
			case 8:
			case 9:
			case 11:
			case 12:
			case 13:
			case 14:
			case 15:
			case 17:
			case 20:
			case TYPE:
			case ID:
			case MUL:
			case SEM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80;
				switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					State = 48; Match(SEM);
					}
					break;

				case 2:
					{
					State = 49; let_stat();
					State = 50; Match(SEM);
					}
					break;

				case 3:
					{
					State = 52; if_stat();
					}
					break;

				case 4:
					{
					State = 53; while_stat();
					}
					break;

				case 5:
					{
					State = 54; for_stat();
					}
					break;

				case 6:
					{
					State = 55; self_addsub_stat();
					State = 56; Match(SEM);
					}
					break;

				case 7:
					{
					State = 58; on_interrupt_stat();
					State = 59; Match(SEM);
					}
					break;

				case 8:
					{
					State = 61; break_stat();
					State = 62; Match(SEM);
					}
					break;

				case 9:
					{
					State = 64; continue_stat();
					State = 65; Match(SEM);
					}
					break;

				case 10:
					{
					State = 67; asm();
					State = 68; Match(SEM);
					}
					break;

				case 11:
					{
					State = 70; func_call();
					State = 71; Match(SEM);
					}
					break;

				case 12:
					{
					State = 73; func_dec();
					State = 74; Match(SEM);
					}
					break;

				case 13:
					{
					State = 76; func_def();
					}
					break;

				case 14:
					{
					State = 77; func_ret();
					State = 78; Match(SEM);
					}
					break;
				}
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; Match(16);
				State = 86;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 11) | (1L << 12) | (1L << 13) | (1L << 14) | (1L << 15) | (1L << 16) | (1L << 17) | (1L << 20) | (1L << TYPE) | (1L << ID) | (1L << MUL) | (1L << SEM))) != 0)) {
					{
					{
					State = 83; stat();
					}
					}
					State = 88;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 89; Match(19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Break_statContext : ParserRuleContext {
		public Break_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_break_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterBreak_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitBreak_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreak_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Break_statContext break_stat() {
		Break_statContext _localctx = new Break_statContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_break_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Continue_statContext : ParserRuleContext {
		public Continue_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_continue_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterContinue_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitContinue_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContinue_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Continue_statContext continue_stat() {
		Continue_statContext _localctx = new Continue_statContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_continue_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class On_interrupt_statContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(mylParser.ID, 0); }
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public On_interrupt_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_on_interrupt_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterOn_interrupt_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitOn_interrupt_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOn_interrupt_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public On_interrupt_statContext on_interrupt_stat() {
		On_interrupt_statContext _localctx = new On_interrupt_statContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_on_interrupt_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(1);
			State = 97; Match(9);
			State = 98; number_expr(0);
			State = 99; Match(5);
			State = 100; Match(ID);
			State = 101; Match(4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Let_statContext : ParserRuleContext {
		public Var_refContext var_ref() {
			return GetRuleContext<Var_refContext>(0);
		}
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public ITerminalNode LET() { return GetToken(mylParser.LET, 0); }
		public Let_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_let_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterLet_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitLet_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLet_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Let_statContext let_stat() {
		Let_statContext _localctx = new Let_statContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_let_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; var_ref();
			State = 104; Match(LET);
			State = 105; number_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class While_statContext : ParserRuleContext {
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public While_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_while_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterWhile_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitWhile_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public While_statContext while_stat() {
		While_statContext _localctx = new While_statContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_while_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(6);
			State = 108; Match(9);
			State = 109; number_expr(0);
			State = 110; Match(4);
			State = 111; stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class For_statContext : ParserRuleContext {
		public StatContext sinit;
		public For_stepContext sstep;
		public StatContext smain;
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public For_stepContext for_step() {
			return GetRuleContext<For_stepContext>(0);
		}
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public ITerminalNode SEM() { return GetToken(mylParser.SEM, 0); }
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public For_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_for_stat; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterFor_stat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitFor_stat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFor_stat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public For_statContext for_stat() {
		For_statContext _localctx = new For_statContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_for_stat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(8);
			State = 114; Match(9);
			State = 115; _localctx.sinit = stat();
			State = 116; number_expr(0);
			State = 117; Match(SEM);
			State = 118; _localctx.sstep = for_step();
			State = 119; Match(4);
			State = 120; _localctx.smain = stat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class For_stepContext : ParserRuleContext {
		public Self_addsub_statContext self_addsub_stat() {
			return GetRuleContext<Self_addsub_statContext>(0);
		}
		public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public Let_statContext let_stat() {
			return GetRuleContext<Let_statContext>(0);
		}
		public For_stepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_for_step; }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterFor_step(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitFor_step(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFor_step(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public For_stepContext for_step() {
		For_stepContext _localctx = new For_stepContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_for_step);
		try {
			State = 125;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122; let_stat();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 123; self_addsub_stat();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 124; stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_statContext : ParserRuleContext {
		public If_statContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_if_stat; }
	 
		public If_statContext() { }
		public virtual void CopyFrom(If_statContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Ifelse_nodeContext : If_statContext {
		public StatContext truestat;
		public StatContext falsestat;
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public Ifelse_nodeContext(If_statContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterIfelse_node(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitIfelse_node(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfelse_node(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class If_nodeContext : If_statContext {
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public StatContext stat() {
			return GetRuleContext<StatContext>(0);
		}
		public If_nodeContext(If_statContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterIf_node(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitIf_node(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_statContext if_stat() {
		If_statContext _localctx = new If_statContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_if_stat);
		try {
			State = 141;
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new If_nodeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 127; Match(11);
				State = 128; Match(9);
				State = 129; number_expr(0);
				State = 130; Match(4);
				State = 131; stat();
				}
				break;

			case 2:
				_localctx = new Ifelse_nodeContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 133; Match(11);
				State = 134; Match(9);
				State = 135; number_expr(0);
				State = 136; Match(4);
				State = 137; ((Ifelse_nodeContext)_localctx).truestat = stat();
				State = 138; Match(18);
				State = 139; ((Ifelse_nodeContext)_localctx).falsestat = stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Func_decContext : ParserRuleContext {
		public Func_decContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_func_dec; }
	 
		public Func_decContext() { }
		public virtual void CopyFrom(Func_decContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Func_dec_no_varContext : Func_decContext {
		public Ids_defContext params_def;
		public Ids_defContext ids_def() {
			return GetRuleContext<Ids_defContext>(0);
		}
		public ITerminalNode ID() { return GetToken(mylParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(mylParser.TYPE, 0); }
		public Func_dec_no_varContext(Func_decContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterFunc_dec_no_var(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitFunc_dec_no_var(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc_dec_no_var(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Func_dec_varContext : Func_decContext {
		public Ids_defContext params_def;
		public Ids_defContext vars_def;
		public Ids_defContext ids_def(int i) {
			return GetRuleContext<Ids_defContext>(i);
		}
		public Ids_defContext[] ids_def() {
			return GetRuleContexts<Ids_defContext>();
		}
		public ITerminalNode ID() { return GetToken(mylParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(mylParser.TYPE, 0); }
		public Func_dec_varContext(Func_decContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.EnterFunc_dec_var(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ImylListener typedListener = listener as ImylListener;
			if (typedListener != null) typedListener.ExitFunc_dec_var(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ImylVisitor<TResult> typedVisitor = visitor as ImylVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc_dec_var(this);
			else return visitor.VisitChildren(this);
		}
	}
